--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 echo 'Hello World'
                 script{
-                    def datas = readYaml File: "projects.yaml"
+                    def datas = readYaml file: "${WORKSPACE}/projects.yaml"
                     println (datas)
                 }
             }
