--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,12 +7,8 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    datas.each{tech, projects ->
-                        println(tech)
-                        for (each_project in projects){
-                            println(each_project)
-                        }
-                    }
+                    def f = load "${WORKSPACE}/folder.groovy"
+                    f(datas)
                 }
             }
         }
