--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,7 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    def f = load "${WORKSPACE}/folder.groovy"
-                    f(datas)
+                    createFolders("${WORKSPACE}/folder.groovy", datas)
                 }
             }
         }
