--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,8 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    createFolders("${WORKSPACE}/folder.groovy", datas)
+                    def createFolders = load "${WORKSPACE}/folder.groovy"
+                    createFolders(datas)
                 }
             }
         }
