--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
                     def createFolders = load "${WORKSPACE}/folder.groovy"
-                    createFolders(datas)
+                    createFolders.d(datas)
                 }
             }
         }
