--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    def createFolders = load "${WORKSPACE}/folder.groovy"
-                    createFolders.d(datas)
+                    def createFolders = load "${WORKSPACE}/s.groovy"
+                    createFolders("${WORKSPACE}/folder.groovy",datas)
                 }
             }
         }
