--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,7 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    def createFolders = load "${WORKSPACE}/s.groovy"
-                    createFolders("${WORKSPACE}/folder.groovy",datas)
+                    jobDsl targets: "${WORKSPACE}/folder.groovy", additionalParameters: [folders: datas]
                 }
             }
         }
