--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,8 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def datas = readYaml file: "${WORKSPACE}/projects.yaml"
-                    jobDsl targets: "${WORKSPACE}/folder.groovy", additionalParameters: [folders: datas]
+                    def f = "${WORKSPACE}/folder.groovy"
+                    jobDsl targets: f, additionalParameters: [folders: datas]
                 }
             }
         }
