--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,8 @@ pipeline {
                         for (each_project in projcts){
                             def pipelines = readYaml file: "${WORKSPACE}/projects/${each_project}/config.yaml"
                             def pipeline_data = pipelines["conf"]
-                            jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
+                            println (each_project)
+                            // jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
                         }
                     }
 
