--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,13 +7,12 @@ pipeline {
                 echo 'Hello World'
                 script{
                     def projects = readYaml file: "${WORKSPACE}/projects.yaml"
-                    jobDsl targets: "folder.groovy", additionalParameters: [folders: projects]
+                    // sjobDsl targets: "folder.groovy", additionalParameters: [folders: projects]
                     projects.each{tech, projcts ->
                         for (each_project in projcts){
                             def pipelines = readYaml file: "${WORKSPACE}/projects/${each_project}/config.yaml"
                             def pipeline_data = pipelines["conf"]
-                            println (each_project)
-                            // jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
+                            jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
                         }
                     }
 
