--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,10 @@ pipeline {
                         for (each_project in projcts){
                             def pipelines = readYaml file: "${WORKSPACE}/projects/${each_project}/config.yaml"
                             def pipeline_data = pipelines["conf"]
-                            jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
+                            if (tech == "aws"){
+                                get_param = load "awsCodePipeline.groovy"
+                                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, params: get_param]
+                            }
                         }
                     }
                 }
