--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,4 @@
+import groovy.json.JsonBuilder
 node('master'){
     stage("clone repository"){
         checkout scm: [
@@ -19,7 +20,8 @@ node('master'){
                 def pipeline_data = pipelines["conf"]
                 if (tech == "aws"){
                     get_param = load "${WORKSPACE}/main/lib/awsCodePipeline.groovy"
-                    jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, params: get_param(pipeline_data)]
+                    def paramsStr = new JsonBuilder(get_param(pipeline_data)).toString()
+                    jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, params: paramsStr]
                 }
             }
         }
