--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 import groovy.json.JsonBuilder
 node('master'){
     properties([
-        buildDiscarder(logRotator(daysToKeepStr: '3', numToKeepStr: '3'))
+        buildDiscarder(logRotator(daysToKeepStr: '3', numToKeepStr: '3')),
         disableConcurrentBuilds()
     ])
     stage("clone repository"){
