--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -3,13 +3,14 @@ conf:
     common:
       gitUrl: 'https://github.com/ShaktiAhad/jenkin-dsl.git'
       branch: 'main'
+      cred: 'personal-git-cred'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
-      region: 'ap-northeast-1'
       
     awsCodePipeline:
       codeCommitRepo: 'shakti-test-repo'
       cfStack: 's3-bucket-cf'
       codePipeline: 'shakti-test-nodejs'
+      region: 'ap-northeast-1'
       inputParams:
         string: 
           releaseVersion:
@@ -18,12 +19,8 @@ conf:
 
     awsEventRule:
       eventRule: 'test'
+      region: 'ap-northeast-1'
       inputParams:
-        string: 
-          releaseVersion:
-            defaultValue: 'x.x.x'
-            description: 'release version'
-
         choice:
           event_rule_status:
             description: 'Change event rule status'
