--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -8,7 +8,10 @@ conf:
       
     awsCodePipeline:
       codeCommitRepo: 'shakti-test-repo'
-      cfStack: 's3-bucket-cf'
+      cfStack:
+        name: 's3-bucket-cf'
+        parameters: 
+          Environment: 'test'
       codePipeline: 'shakti-test-nodejs'
       region: 'ap-northeast-1'
       inputParams:
