--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -12,7 +12,11 @@ conf:
         name: 's3-bucket-cf'
         parameters: 
           - ParameterKey: 'Environment'
-            ParameterValue: 'test' 
+            ParameterValue: 'test'
+          - ParameterKey: 'sdsd'
+            ParameterValue: 'ddfd'
+          - ParameterKey: 'vbgbgb'
+            ParameterValue: 'gnhn' 
       codePipeline: 'shakti-test-nodejs'
       region: 'ap-northeast-1'
       inputParams:
