--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -12,7 +12,7 @@ conf:
         name: 's3-bucket-cf'
         parameters: 
           - ParameterKey: 'Environment'
-            ParameterValue: 'test'
+            UsePreviousValue: 'true'
       codePipeline: 'shakti-test-nodejs'
       region: 'ap-northeast-1'
       inputParams:
