--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -13,7 +13,7 @@ conf:
         parameters: 
           - ParameterKey: 'Environment'
             ParameterValue: 'test'
-      codePipeline: 'shakti-test-nodejs'
+      codePipeline: 'shakti-test-pipeline'
       region: 'ap-northeast-1'
       inputParams:
         string: 
