--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,21 +22,7 @@ node('master'){
             for (each_project in projcts){
                 def pipelines = readYaml file: "${WORKSPACE}/projects/${each_project}/config.yaml"
                 def pipeline_data = pipelines["conf"]
-                if (tech == "aws"){
-                    pipeline_data.each{key, value ->
-                        value.each{pipeline_name, pipeline_val ->
-                            if (pipeline_name != "awsCodePipeline"){
-                                get_param = load "${WORKSPACE}/main/lib/awsCodePipeline.groovy"
-                                paramsStr = new JsonBuilder(get_param(pipeline_data)).toString()
-                                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, params: paramsStr]
-                            }
-                            else if (pipeline_name != "awsEventRule"){
-                                get_param = load "${WORKSPACE}/main/lib/awsEventRule.groovy"
-                                paramsStr = new JsonBuilder(get_param(pipeline_data)).toString()
-                                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, params: paramsStr]
-                            }
-                        }
-                    }
+                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project]
                 }
             }
         }
