--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ node('master'){
             for (each_project in projcts){
                 def pipelines = readYaml file: "${WORKSPACE}/projects/${each_project}/config.yaml"
                 def pipeline_data = pipelines["conf"]
-                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, workspace:${WORKSPACE}]
+                jobDsl targets: "pipeline.groovy", additionalParameters: [pipelines: pipeline_data, project: each_project, workspace:"${WORKSPACE}"]
             }
         }
     }
