--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -10,8 +10,8 @@ conf:
       cfStack:
         name: 's3-bucket-cf'
         parameters: 
-          - parameterKey: 'Environment'
-            parameterValue: 'test'
+          - ParameterKey: 'Environment'
+            UsePreviousValue: true
       codePipeline: 'shakti-test-nodejs' # 'shakti-test-pipeline'
       region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
