--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -20,6 +20,9 @@ conf:
           releaseVersion:
             defaultValue: 'x.x.x'
             description: 'release version'
+        string: 
+          bucket:
+            description: 'put bucket name'
 
     awsEventRule:
       eventRule: 'test'
