--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -12,7 +12,7 @@ conf:
         parameters: 
           - ParameterKey: 'Environment'
             UsePreviousValue: true
-      codePipeline: 'shakti-test-nodejs' # 'shakti-test-pipeline'
+      codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs' 
       region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
       inputParams:
