--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -7,13 +7,8 @@ conf:
       
     awsCodePipeline:
       codeCommitRepo: 'shakti-test-repo'
-      cfStack:
-        name: 's3-bucket-cf'
-        parameters: 
-          - ParameterKey: 'Environment'
-            UsePreviousValue: true
+      cfStack: 's3-bucket-cf'
       codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs' 
-      region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
       inputParams:
         string: 
@@ -26,7 +21,6 @@ conf:
 
     awsEventRule:
       eventRule: 'test'
-      region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.eventRule'
       inputParams:
         choice:
