--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -9,6 +9,7 @@ conf:
       codeCommitRepo: 'shakti-test-repo'
       cfStack: 's3-bucket-cf'
       codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs' 
+      region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
       inputParams:
         string: 
@@ -21,6 +22,7 @@ conf:
 
     awsEventRule:
       eventRule: 'test'
+      region: 'ap-northeast-1'
       jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.eventRule'
       inputParams:
         choice:
