--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -5,12 +5,11 @@ conf:
       branch: 'main'
       cred: 'personal-git-cred'
       
-    awsCodePipeline:
+    codePipeline:
       codeCommitRepo: 'shakti-test-repo'
       cfStack: 's3-bucket-cf'
       codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs' 
       region: 'ap-northeast-1'
-      jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.codePipeline'
       inputParams:
         string: 
           releaseVersion:
@@ -20,10 +19,9 @@ conf:
           bucket:
             description: 'put bucket name'
 
-    awsEventRule:
+    eventRule:
       eventRule: 'test'
       region: 'ap-northeast-1'
-      jenkinfilePath: 'main/jenkinfile_per_pipeline/Jenkinsfile.eventRule'
       inputParams:
         choice:
           event_rule_status:
