--- a/projects/a/config.yaml
+++ b/projects/a/config.yaml
@@ -8,7 +8,8 @@ conf:
     awsCodePipeline:
       codeCommitRepo: 'shakti-test-repo'
       cfStack: 's3-bucket-cf'
-      codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs' 
+      codePipeline: 'shakti-test-pipeline' # 'shakti-test-nodejs'
+      eventRule: 'test' 
       region: 'ap-northeast-1'
       inputParams:
         string: 
